Very important fixes - auto-reconnect to publisher, addition on JNLogger, send digest on incomplete journal payload on read failure to force publisher retransfer.